--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ version: '3.8'
 services:
   decrypt_api:
     build: .
-    image: p0lcatha/decrypt-test:latest
+    image: p0lcatha/decrypt-test:1.2
     command: bash -c 'while !</dev/tcp/db/5432; do sleep 1; done; uvicorn app.main:decrypt_app --host 0.0.0.0'
     volumes:
       - .:/app
